--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.6.7",
     "query-string": "^8.2.0",
     "react": "^18.2.0",
+    "react-avatar-editor": "^13.0.2",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "swr": "^2.2.4"
