--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-avatar-editor": "^13.0.2",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "swr": "^2.2.4"
