--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "primeicons": "^6.0.1",
+    "primereact": "^10.5.1",
     "query-string": "^8.2.0",
     "react": "^18.2.0",
     "react-avatar-editor": "^13.0.2",
