--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "@tanstack/react-query": "^5.37.1",
     "axios": "^1.6.8",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.3",
@@ -22,10 +23,10 @@
     "react-hot-toast": "^2.4.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.22.3",
-    "swr": "^2.2.5"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.35.6",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.66",
     "@types/react-avatar-editor": "^13.0.2",
